// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<p
  className="sc-AxjAm igJlAv sinoui-typography sinoui-typography--body1"
  color="textPrimary"
  type="body1"
>
  Body1
</p>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-AxjAm igJlAv sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </h2>,
  <p
    className="sc-AxjAm ffGbHz sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-AxjAm fafbIa sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-AxjAm kWZJhf sinoui-typography sinoui-typography--body1"
    color="success"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-AxjAm igJlAv sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <p
    className="sc-AxjAm igJlAv sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-AxjAm iSaVBg sinoui-typography sinoui-typography--body1"
    color="primary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-AxjAm iulKID sinoui-typography sinoui-typography--body1"
    color="secondary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-AxjAm igJlAv sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-AxjAm eATqAS sinoui-typography sinoui-typography--body1"
    color="textSecondary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-AxjAm gcNqBi sinoui-typography sinoui-typography--body1"
    color="error"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-AxjAm dfTFbX sinoui-typography sinoui-typography--body1"
    color="warning"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-AxjAm kWZJhf sinoui-typography sinoui-typography--body1"
    color="success"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-AxjAm xHUL sinoui-typography sinoui-typography--body1"
    color="info"
    type="body1"
  >
    Body1
  </p>,
]
`;
